# evse-api-server

./: .gitignore  AGENTS.md  Cargo.toml  README.md  api_e2e_codexReview.md
.github/workflows/: ci.yml
crates/evse-api-core/: Cargo.toml  build.rs
crates/evse-api-core/src/: error.rs  ffi.rs  lib.rs  manager.rs  protocol.rs  session.rs
crates/evse-api-server/: Cargo.toml
crates/evse-api-server/src/: main.rs  server.rs
docs/: stack_trace.md
tools/: e2e_test.sh  evcc_emulator.py  smoke_test.sh
tools/e2e_scenarios/: ac_der_iec.json  ac_flow.json  dc_scheduled.json  note.md  note.txt
