[package]
name = "evse-api-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "evse-api-server"
path = "src/main.rs"

[dependencies]
evse-api-core = { path = "../evse-api-core" }
axum = { version = "0.8", features = ["ws"] }
tokio.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
